@@ -1,7 +1,7 @@
 /*
 author: David Fischer
 matnr:  i16079
-file:   util.cpp
+file:   Util.cpp
 desc:   NVS Projekt 2 - Simpler POP3 Client mit TLS Support
 class:  5C
 catnr:  03
